# English-net-dict

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  setup.ps1  setup.sh  start.ps1  start.sh
backend/: .env.example  README.md  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_phrase_detail.py  003_phrase_wiktionary_relations.py
backend/app/: config.py  constants.py  database.py  main.py  models.py  schemas.py
backend/app/migrations/: __init__.py  alembic_runner.py  runtime_sqlite.py
backend/app/prompts/: component_chat.md  example_sentence.md  group_suggest_rerank.md  group_suggest_rules.md  image_generation.md  word_chat.md
backend/app/routers/: chat.py  etymology_components.py  groups.py  images.py  migration.py  phrases.py  words.py
backend/app/scripts/: batch_add_words.py  batch_inflection_import.py  batch_inflection_report.csv  batch_inflection_report.py  benchmark_ingest.py  benchmark_words.txt  check_db_schema.py  check_etymology_components.py  existing_inflection_report.csv  patch_base.py  patch_enrich_etymology_map.py  patch_fix_forms_comparison_markers.py  patch_fix_forms_noise.py  patch_fix_inflected_words.py  patch_normalize_etymology_json.py  patch_phrase_meanings.py  (+8 more)
backend/core/: __init__.py  constants.py  database.py  models.py  schemas.py
backend/database_build/: __init__.py  __main__.py  cli.py  reporting.py  runtime.py  selectors.py
backend/prompts/: component_chat.md  etymology_enrichment.md  word_structuring.md
backend/server/: __init__.py  main.py
(+202 files in other folders)
